# cargo-ci-precache

./: CHANGELOG.md  Cargo.toml  README.md  meta-all.json  meta.json
.github/: ci.yaml  update.yml
.github/workflows/: ci.yaml  release.yaml  test.yaml  update.yml
src/: fingerprint.rs  lib.rs  main.rs  meta.rs
tests/: tests.rs  version_update.rs
tests/build_script/: Cargo.toml  Cargo.toml.update
tests/feature_change/: Cargo.toml  Cargo.toml.update
tests/nested-dep/: Cargo.toml
tests/nested_dep/: Cargo.lock.update  Cargo.toml  Cargo.toml.update
tests/single_dep/: Cargo.toml  Cargo.toml.update
tests/two_deps/: Cargo.toml  Cargo.toml.update
