[package]
name = "ci-precache"
version = "0.1.0"
authors = ["Jason Newcomb <jsnewcomb@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rm_rf = "0.6"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["derive", "std", "cargo"]

[dependencies]
anyhow = "1"
home = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
