[package]
name = "cargo-ci-precache"
version = "0.1.0"
authors = ["Jason Newcomb <jsnewcomb@pm.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jarcho/cargo-ci-precache"
description = "Pre-cache action for CI servers. Deletes frequently changed and outdated files/"
exclude = [".github/*"]
readme = "README.md"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rm_rf = "0.6"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["derive", "std", "cargo"]

[dependencies]
anyhow = "1"
home = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
